test/bad/generics/def05.px

func f<T>(T x: 3, T y: true) def
    return

f()
